WIP
-----------------------------
* Standings Widget
  - Added "show_best_laptime" option,
    which shows driver's session best lap time.
    This option is disabled by default.
    Note: when this option is disabled,
    the other "show_laptime" option will
    show best lap time in none-race sessions.

* Tyre carcass Widget
  - [New]Added "show_rate_of_change" option,
    which shows carcass temeperature rate of change for a specific time interval.
  - Added "rate_of_change_interval" option,
    which sets time interval (in seconds) for rate of change calculation.
    Default is 5 seconds.
  - Added "layout" & "column_index_*" options.

* Misc
  - Updated Tyre carcass Widget entries in user guide.
  - Updated README info for LMU.

2.8.0 (2024-02-23)
-----------------------------
* [New]Damage Widget
  - Show visualized vehicle body damage, wheel damage info.
  - Show vehicle body integrity percentage reading.

* Standings Widget
  - Added "show_time_interval_from_same_class" option,
    which shows time interval from same class instead.
    This option is enabled by default, and only takes effect
    while "enable_multi_class_split_mode" is enabled.

* Steering Widget
  - Added "manual_steering_range" option,
    which sets steering display range in degrees.
    Set to "0" to read physical steering range from API.
    This option may be useful when steering range value
    is not provided by some vehicles.

* Misc
  - Added "Hyper" class to default classes.json setting.
  - Updated "rF2 Shared Memory Map Plugin" download link in README file.
  - Added new entries in Damage, Standings, Steering Widget sections in User Guide.

2.7.0 (2024-02-05)
-----------------------------
* [New]Deltabest extended Widget
  - Added new Deltabest extended widget that shows deltabest
    against multiple lap time sources.
    Note: default layout is set on horizontal.
    Set layout value to 0 to show vertical layout.
  - Show deltabest against personal all time best lap time.