@@ -918,6 +918,7 @@ WIDGET_DEFAULT = {
         "font_color_player_driver_name": "#000000",
         "bkg_color_player_driver_name": "#CCCCCC",
         "show_vehicle_name": False,
+        "show_vehicle_brand_as_name": True,
         "vehicle_name_uppercase": False,
         "vehicle_name_width": 10,
         "font_color_vehicle_name": "#FFFFFF",
@@ -1139,6 +1140,7 @@ WIDGET_DEFAULT = {
         "font_color_player_driver_name": "#000000",
         "bkg_color_player_driver_name": "#CCCCCC",
         "show_vehicle_name": False,
+        "show_vehicle_brand_as_name": True,
         "vehicle_name_uppercase": False,
         "vehicle_name_width": 10,
         "font_color_vehicle_name": "#FFFFFF",
